--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title> My First Website</title>
+        <title> Eya's First Website</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
