Update paragraph text in index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p> This is my first website deployed with GitHub Pages.</p>
+        <p> This is Eya's first website deployed with GitHub Pages.</p>
     </body>
 </html>
