--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <p> This is Eya's first website deployed with GitHub Pages.</p>
+        <h1>Welcome to My Updated Website 🚀</h1>
     </body>
 </html>
